--- a/packages/root/src/index.ejs
+++ b/packages/root/src/index.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval' data: blob:">
 
   <title>
     <%= htmlWebpackPlugin.options.title %>
@@ -14,7 +15,7 @@
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/regenerator-runtime@0.13.7/runtime.min.js"></script>
 
-  <meta name="importmap-type" content="systemjs-importmap" />
+  <meta name="importmap-type" content="systemjs-importmap" />  
 
   <script type="systemjs-importmap">
     {
@@ -30,6 +31,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600,700&display=swap">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600,700&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" />
+
   <link rel="preload" href="https://unpkg.com/single-spa@5.9.0/lib/umd/single-spa.min.js" as="script">
 
   <script type="systemjs-importmap" src="/importmap.json"></script>
